; ModuleID = '/home/carl/AnghaBench/tmux/extr_window.c_window_remove_pane.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window.c_window_remove_pane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window = type { i32 }
%struct.window_pane = type { i32 }

@entry = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @window_remove_pane(%struct.window* %0, %struct.window_pane* %1) #0 {
  %3 = alloca %struct.window*, align 8
  %4 = alloca %struct.window_pane*, align 8
  store %struct.window* %0, %struct.window** %3, align 8
  store %struct.window_pane* %1, %struct.window_pane** %4, align 8
  %5 = load %struct.window*, %struct.window** %3, align 8
  %6 = load %struct.window_pane*, %struct.window_pane** %4, align 8
  %7 = call i32 @window_lost_pane(%struct.window* %5, %struct.window_pane* %6)
  %8 = load %struct.window*, %struct.window** %3, align 8
  %9 = getelementptr inbounds %struct.window, %struct.window* %8, i32 0, i32 0
  %10 = load %struct.window_pane*, %struct.window_pane** %4, align 8
  %11 = load i32, i32* @entry, align 4
  %12 = call i32 @TAILQ_REMOVE(i32* %9, %struct.window_pane* %10, i32 %11)
  %13 = load %struct.window_pane*, %struct.window_pane** %4, align 8
  %14 = call i32 @window_pane_destroy(%struct.window_pane* %13)
  ret void
}

declare dso_local i32 @window_lost_pane(%struct.window*, %struct.window_pane*) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.window_pane*, i32) #1

declare dso_local i32 @window_pane_destroy(%struct.window_pane*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
